General ATNA client cleanup.